# gpd_vcloud

./: README.md  index.html
doc/: style.css
gpd_vcloud/: CMakeLists.txt  package.xml
gpd_vcloud/include/gpd_vcloud/: data_generator.h  grasp_detector.h  grasp_image_15_channels.h  learning.h  sequential_importance_sampling.h
gpd_vcloud/launch/: step1_realsense_gets_pointcloud.launch  step2_gpd_vcloud.launch
gpd_vcloud/msg/: CloudIndexed.msg  CloudSamples.msg  GraspConfig.msg  GraspConfigList.msg
gpd_vcloud/rviz/: gpd_vcloud.rviz
gpd_vcloud/src/: gpd_vcloud_node.cpp  grasp_detector_vcloud.cpp  grasp_detector_vcloud.h  grasp_visual_markers.h  pointcloud_downsize.h  sub_plot.h  vCloud_generator.h
gpd_vcloud/src/gpd_vcloud/: caffe_classifier.cpp  clustering.cpp  data_generator.cpp  grasp_detector.cpp  grasp_image.cpp  grasp_image_15_channels.cpp  learning.cpp  sequential_importance_sampling.cpp
